create: connect normalize.scss

--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -2,6 +2,8 @@
 @import 'variables'
 // Базовые настройки
 @import 'settings'
+// подключение normalize
+@import 'normalize'
 // Стили для header
 @import 'blocks/header'
 
