--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -5,9 +5,12 @@
     align-items: center
     justify-content: space-between
     padding: 40px 0px
+    &__menu-button
+      display: none 
   &__search
     margin-right: auto
     margin-left: 108px
+  
   &-bottom
     background-color: $dark
   &-menu
