create: breadcrump and hotel-info + adaprive

--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -6,6 +6,10 @@
 @import 'normalize'
 // Стили для header
 @import 'blocks/header'
+// breadcrumbs
+@import 'blocks/breadcrumb'
+// Подключение стилей для секции Hotel 
+@import 'blocks/hotel'
 // Подключение адапттива
 @import 'media'
 
