--- a/css/styles.css
+++ b/css/styles.css
@@ -393,7 +393,7 @@ template {
 .navbar-menu {
   list-style-type: none;
   margin: 0;
-  padding: 22px 0px;
+  padding: 31px 0px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -658,6 +658,9 @@ template {
     -ms-flex-preferred-size: auto;
         flex-basis: auto;
   }
+  .hotel {
+    padding-top: 0;
+  }
   .hotel-wrapper {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
@@ -687,6 +690,15 @@ template {
 @media (max-width: 576px) {
   .logo {
     width: 99px;
+  }
+}
+
+@media (max-width: 320px) {
+  .stars {
+    padding-right: 30px;
+  }
+  .hotel-info__description {
+    padding-right: 30px;
   }
 }
 /*# sourceMappingURL=styles.css.map */
