--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -5,6 +5,7 @@
     display: flex
     align-items: center
     justify-content: space-between
+    padding-bottom: 20px
     &__offer
       margin-left: 14px
       margin-top: 4px
@@ -16,15 +17,15 @@
   &-name
     font-size: 24px
     line-height: 30px
-    
   &-wrapper
     display: flex
-    flex-wrap: wrap 
+    flex-wrap: wrap
     align-items: center
   &-description
     font-size: 12px
     line-height: 15px
     color: inherit
+    
 .stars
   flex-basis: 100%
 .offer
@@ -47,4 +48,42 @@
   &__counter
     font-size: 14px
     line-height: 18px
+.swiper-container 
+  width: 100%
+  height: 450px
+  position: relative
+  border-radius: 8px
+  &:after
+    content: ''
+    position: absolute
+    width: 100%
+    height: 100%
+    top: 0
+    bottom: 0
+    left: 0
+    right: 0
+    background: linear-gradient(180deg, rgba(0, 122, 223, 0.48) 0%, rgba(255, 255, 255, 0.128) 100%)
+    z-index: 10
+.slider
+  width: 728px
+  &-button
+    position: absolute
+    top: 50%
+    transform: translateY(-50%)
+    z-index: 99
+    width: 30px
+    height: 30px
+    border: none
+    cursor: pointer
+    background: no-repeat
+    background-position: center
+    background-size: 10px
+    background-color: transaprent
+    &--next
+      right: 18px
+      background-image: url(../img/arrow-right.svg)
+    &--prev
+      left: 18px
+      background-image: url(../img/arrow-left.svg)
 
+  
