--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -25,6 +25,14 @@
     font-size: 12px
     line-height: 15px
     color: inherit
+  &-grid
+    display: flex
+    justify-content: space-between
+    
+  &-right
+    display: flex
+    flex-direction: column
+    justify-content: space-between
     
 .stars
   flex-basis: 100%
@@ -85,5 +93,81 @@
     &--prev
       left: 18px
       background-image: url(../img/arrow-left.svg)
-
+.booking
+  background: $dark
+  color: $light
+  border-radius: 8px
+  width: 350px
+  max-width: 350px
+  max-height: 210px
+  padding: 28px
+  font-family: Nunito
+  &__info
+    display: flex
+    justify-content: space-between
+    margin-bottom: 9px
+  &__price
+    display: flex
+    flex-direction: column
+  &__start
+    font-size: 10px
+    line-height: 14px
+  &__pricetag
+    font-style: normal
+    font-weight: 800
+    font-size: 24px
+    line-height: 33px
+  &__per-room
+    font-style: normal
+    font-weight: normal
+    font-size: 12px
+    line-height: 16px
+  &__room
+    margin-top: 4px
+  &__text
+    display: flex
+    align-items: center
+    justify-content: space-between
+    margin-bottom: 8px
+    font-style: normal
+    font-weight: normal
+    font-size: 12px
+    line-height: 16px
+  &__description
+    margin-left: 9px
+  &__call-center
+    display: flex
+    align-items: center
+    justify-content: space-between
+    margin-bottom: 17px
+  &__heading
+    font-style: normal
+    font-weight: 600
+    font-size: 18px
+    line-height: 25px
+  &__number
+    display: flex
+    align-items: center
+    justify-content: space-between
+    color: inherit
+    text-decoration: none
+    font-style: normal
+    font-weight: 600
+    font-size: 18px
+    line-height: 25px
+  &__num
+    margin-left: 8px
+  &__button
+    width: 100%
+    min-height: 45px
+    border-radius: 4px
+    border: none
+    background-color: $primary
+    color: $light
+    font-style: normal
+    font-weight: 600
+    font-size: 14px
+    line-height: 19px
+.map
+  
   
