create: added map js api

--- a/css/styles.css
+++ b/css/styles.css
@@ -793,6 +793,11 @@ template {
   line-height: 19px;
 }
 
+.map {
+  width: 347px;
+  height: 213px;
+}
+
 @media (max-width: 1200px) {
   .container {
     max-width: 960px;
