create: responsive for slider, booking and map

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,6 +1,14 @@
 @media (max-width: 1200px)
   .container
     max-width: 960px
+  .slider
+    width: 590px
+    .swiper
+      &-slide
+        &__image
+          height: 100%
+          width: 100%
+          object-fit: cover
 @media (max-width: 992px)
   .container
     max-width: 700px
@@ -20,6 +28,19 @@
   .search
     &__input
       max-width: 340px
+  .hotel
+    &-grid
+      flex-direction: column
+    &__slider
+      margin-bottom: 30px
+    &-right
+      flex-direction: row
+  .booking
+    width: 340px
+  .slider
+    width: 100%
+  .map 
+    width: 340px
 @media (max-width:768px)
   .container
     max-width: 576px
@@ -63,10 +84,26 @@
       &__offer
         order: -1
         margin-left: 0
-  
+  .swiper-container
+    height: 350px
+  .slider
+    height: 350px
+  .hotel
+    &-right
+      flex-direction: column
+      min-height: 450px
+  .booking
+    width: 100%
+  .map
+    width: 100%
 @media (max-width:576px)
   .logo
     width: 99px
+  .swiper-container
+    height: 250px
+  .slider
+    height: 250px
+    margin-bottom: 20px
      
 @media (max-width: 320px)
   .stars
@@ -75,3 +112,12 @@
     &-info
       &__description
         padding-right: 30px
+  .swiper-container
+    height: 179px
+  .slider
+    height: 179px
+  .hotel
+    &-right
+      min-height: 405px
+  .map
+    height: 173px
