--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -74,6 +74,7 @@
     z-index: 10
 .slider
   width: 728px
+  height: 450px
   &-button
     position: absolute
     top: 50%
@@ -97,8 +98,8 @@
   background: $dark
   color: $light
   border-radius: 8px
-  width: 350px
-  max-width: 350px
+  // width: 350px
+  // max-width: 350px
   max-height: 210px
   padding: 28px
   font-family: Nunito
@@ -168,9 +169,11 @@
     font-weight: 600
     font-size: 14px
     line-height: 19px
+    cursor: pointer
 .map
   width: 347px
   height: 213px
-  
+  border-radius: 10px
+  overflow: hidden
   
   
