--- a/css/styles.css
+++ b/css/styles.css
@@ -635,6 +635,7 @@ template {
 
 .slider {
   width: 728px;
+  height: 450px;
 }
 
 .slider-button {
@@ -667,8 +668,6 @@ template {
   background: #0A223D;
   color: #ffffff;
   border-radius: 8px;
-  width: 350px;
-  max-width: 350px;
   max-height: 210px;
   padding: 28px;
   font-family: Nunito;
@@ -791,16 +790,28 @@ template {
   font-weight: 600;
   font-size: 14px;
   line-height: 19px;
+  cursor: pointer;
 }
 
 .map {
   width: 347px;
   height: 213px;
+  border-radius: 10px;
+  overflow: hidden;
 }
 
 @media (max-width: 1200px) {
   .container {
     max-width: 960px;
+  }
+  .slider {
+    width: 590px;
+  }
+  .slider .swiper-slide__image {
+    height: 100%;
+    width: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
 }
 
@@ -826,6 +837,30 @@ template {
   }
   .search__input {
     max-width: 340px;
+  }
+  .hotel-grid {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .hotel__slider {
+    margin-bottom: 30px;
+  }
+  .hotel-right {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .booking {
+    width: 340px;
+  }
+  .slider {
+    width: 100%;
+  }
+  .map {
+    width: 340px;
   }
 }
 
@@ -894,11 +929,37 @@ template {
             order: -1;
     margin-left: 0;
   }
+  .swiper-container {
+    height: 350px;
+  }
+  .slider {
+    height: 350px;
+  }
+  .hotel-right {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    min-height: 450px;
+  }
+  .booking {
+    width: 100%;
+  }
+  .map {
+    width: 100%;
+  }
 }
 
 @media (max-width: 576px) {
   .logo {
     width: 99px;
+  }
+  .swiper-container {
+    height: 250px;
+  }
+  .slider {
+    height: 250px;
+    margin-bottom: 20px;
   }
 }
 
@@ -908,6 +969,18 @@ template {
   }
   .hotel-info__description {
     padding-right: 30px;
+  }
+  .swiper-container {
+    height: 179px;
+  }
+  .slider {
+    height: 179px;
+  }
+  .hotel-right {
+    min-height: 405px;
+  }
+  .map {
+    height: 173px;
   }
 }
 /*# sourceMappingURL=styles.css.map */
