create: added newsletter block + responsive

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -96,6 +96,11 @@
     width: 100%
   .map
     width: 100%
+  .newsletter
+    &-wrapper
+      flex-direction: column
+      align-items: flex-start
+
 @media (max-width:576px)
   .logo
     width: 99px
@@ -104,6 +109,21 @@
   .slider
     height: 250px
     margin-bottom: 20px
+  .newsletter
+    padding: 76px 0 83px 0
+    &__title
+      margin-top: 0
+      margin-bottom: 37px
+      font-style: normal;
+      font-weight: 300;
+      font-size: 20px;
+      line-height: 25px
+  .newsletter-title
+    &__strong
+      font-size: 30px;
+      line-height: 38px;
+  .subscribe
+    width: 100%
      
 @media (max-width: 320px)
   .stars
