--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -10,6 +10,8 @@
 @import 'blocks/breadcrumb'
 // Подключение стилей для секции Hotel 
 @import 'blocks/hotel'
+// Подключение стилей блока подписки
+@import 'blocks/newsletter'
 // Подключение адапттива
 @import 'media'
 
