create: added reviews block and smth fixed

--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -12,6 +12,8 @@
 @import 'blocks/hotel'
 // Подключение стилей блока подписки
 @import 'blocks/newsletter'
+// Подключение стилей для отзывов
+@import 'blocks/reviews'
 // Подключение адапттива
 @import 'media'
 
