--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,8 +1,9 @@
 @media (max-width: 1200px)
   .container
     max-width: 960px
-  .slider
-    width: 590px
+  .hotel
+    &-slider
+      width: 590px
     .swiper
       &-slide
         &__image
@@ -35,12 +36,17 @@
       margin-bottom: 30px
     &-right
       flex-direction: row
+    &-slider
+      width: 100%
   .booking
     width: 340px
-  .slider
-    width: 100%
+  
   .map 
     width: 340px
+  .reviews
+    &-slider
+      &__item
+        max-width: 580px
 @media (max-width:768px)
   .container
     max-width: 576px
@@ -84,10 +90,11 @@
       &__offer
         order: -1
         margin-left: 0
+    &-slider
+      height: 350px
   .swiper-container
     height: 350px
-  .slider
-    height: 350px
+  
   .hotel
     &-right
       flex-direction: column
@@ -100,15 +107,32 @@
     &-wrapper
       flex-direction: column
       align-items: flex-start
+  .reviews
+    &-slider
+      &__item
+        padding: 0 30px 30px
+        &:after, &::before
+          display: none
+      &__button
+        top: 45px     
+        &--prev
+          left: 50%
+          margin-left: -65px 
+          transform: translate(-50%, 0)
+        &--next
+          right: 50%
+          margin-right: -65px
+          transform: translate(50%, 0)
 
 @media (max-width:576px)
   .logo
     width: 99px
   .swiper-container
     height: 250px
-  .slider
-    height: 250px
-    margin-bottom: 20px
+  .hotel
+    &-slider
+      height: 250px
+      margin-bottom: 20px
   .newsletter
     padding: 76px 0 83px 0
     &__title
@@ -132,10 +156,11 @@
     &-info
       &__description
         padding-right: 30px
+    &-slider
+      height: 179px
   .swiper-container
     height: 179px
-  .slider
-    height: 179px
+  
   .hotel
     &-right
       min-height: 405px
