--- a/css/styles.css
+++ b/css/styles.css
@@ -587,7 +587,6 @@ template {
 
 .hotel-slider__item {
   width: 100%;
-  height: 450px;
   position: relative;
   border-radius: 8px;
   overflow: hidden;
@@ -805,10 +804,6 @@ template {
 .newsletter {
   position: relative;
   padding: 98px 0 87px 0;
-  background-image: url(../img/newsletter-bg.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
 }
 
 .newsletter:before {
@@ -1104,7 +1099,7 @@ template {
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 769px) {
   .container {
     max-width: 576px;
     width: 92%;
@@ -1197,6 +1192,12 @@ template {
         -ms-flex-align: start;
             align-items: flex-start;
   }
+  .reviews__title {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 30px;
+    line-height: 38px;
+  }
   .reviews-slider__item {
     padding: 0 30px 30px;
   }
@@ -1249,9 +1250,15 @@ template {
   .subscribe {
     width: 100%;
   }
+  .reviews-slider__text {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 12px;
+    line-height: 160%;
+  }
 }
 
-@media (max-width: 320px) {
+@media (min-width: 320px) and (max-width: 576px) {
   .stars {
     padding-right: 30px;
   }
@@ -1262,13 +1269,23 @@ template {
     height: 179px;
   }
   .swiper-container {
-    height: 179px;
+    height: 560px;
   }
   .hotel-right {
     min-height: 405px;
   }
   .map {
     height: 173px;
+  }
+  .reviews__title {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 23px;
+    margin-bottom: 42px;
+  }
+  .reviews-slider__item:before, .reviews-slider__item:after {
+    display: none;
   }
 }
 /*# sourceMappingURL=styles.css.map */
