--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -39,7 +39,7 @@
     border-radius: 8px
     &__item
       width: 100%
-      height: 450px
+      // height: 450px
       position: relative
       border-radius: 8px
       overflow: hidden
