--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -20,7 +20,7 @@
       padding: 30px 0px
     &__search
       margin-left: auto
-     
+
     &-menu
       padding: 22px 0px
       &__link
@@ -40,8 +40,8 @@
       width: 100%
   .booking
     width: 340px
-  
-  .map 
+
+  .map
     width: 340px
   .reviews
     &-slider
@@ -54,7 +54,7 @@
   .navbar
     &__search,
     &-menu, &__user
-      display: none  
+      display: none
   .menu
     &-button
       display: flex
@@ -83,7 +83,7 @@
       &__text
         width: 100%
       &__name
-        margin-top: 10px  
+        margin-top: 10px
       &__rating
         display: none
       &__offer
@@ -91,8 +91,7 @@
         margin-left: 0
     &-slider
       height: 350px
-  .swiper-container
-    height: 350px 
+
   .hotel
     &-right
       flex-direction: column
@@ -130,8 +129,6 @@
 @media (max-width:576px)
   .logo
     width: 99px
-  .swiper-container
-    height: 250px    
   .hotel
     &-slider
       height: 250px
@@ -154,10 +151,10 @@
   .reviews
     &-slider
       &__text
-        font-style: normal;
-        font-weight: normal;
-        font-size: 12px;
-        line-height: 160%;
+        font-style: normal
+        font-weight: normal
+        font-size: 12px
+        line-height: 160%
 
 @media (min-width: 320px) and (max-width: 576px)
   .stars
@@ -168,8 +165,6 @@
         padding-right: 30px
     &-slider
       height: 179px
-  .swiper-container
-    height: 560px  
   .hotel
     &-right
       min-height: 405px
@@ -182,9 +177,8 @@
       font-size: 18px
       line-height: 23px
       margin-bottom: 42px
+      padding: 0 20px
     &-slider
       &__item
         &:before, &:after
           display: none
-
-  
