--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -27,8 +27,7 @@
     color: inherit
   &-grid
     display: flex
-    justify-content: space-between
-    
+    justify-content: space-between    
   &-right
     display: flex
     flex-direction: column
@@ -73,6 +72,8 @@
       &--prev
         left: 18px
         background-image: url(../img/arrow-left.svg)
+.swiper-container
+  margin: 0
 .stars
   flex-basis: 100%
 .offer
