fixed: smth wrongs

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -110,20 +110,21 @@
       font-weight: bold
       font-size: 30px
       line-height: 38px
+      margin-bottom: 50px
     &-slider
       &__item
         padding: 0 30px 30px
         &:after, &::before
           display: none
       &__button
-        top: 45px
+        top: 30px
         &--prev
           left: 50%
-          margin-left: -65px
+          margin-left: -95px
           transform: translate(-50%, 0)
         &--next
           right: 50%
-          margin-right: -65px
+          margin-right: -95px
           transform: translate(50%, 0)
 
 @media (max-width:576px)
