--- a/css/styles.css
+++ b/css/styles.css
@@ -850,6 +850,7 @@ template {
   font-weight: 300;
   font-size: 24px;
   line-height: 30px;
+  margin: 0;
 }
 
 .newsletter-title__strong {
@@ -907,6 +908,7 @@ template {
   line-height: 45px;
   text-align: center;
   text-transform: uppercase;
+  margin-top: 40px;
   margin-bottom: 70px;
 }
 
@@ -1198,6 +1200,7 @@ template {
     font-weight: bold;
     font-size: 30px;
     line-height: 38px;
+    margin-bottom: 50px;
   }
   .reviews-slider__item {
     padding: 0 30px 30px;
@@ -1206,17 +1209,17 @@ template {
     display: none;
   }
   .reviews-slider__button {
-    top: 45px;
+    top: 30px;
   }
   .reviews-slider__button--prev {
     left: 50%;
-    margin-left: -65px;
+    margin-left: -95px;
     -webkit-transform: translate(-50%, 0);
             transform: translate(-50%, 0);
   }
   .reviews-slider__button--next {
     right: 50%;
-    margin-right: -65px;
+    margin-right: -95px;
     -webkit-transform: translate(50%, 0);
             transform: translate(50%, 0);
   }
