--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -26,14 +26,15 @@
     display: flex
     flex-direction: column
     color: $light
-    font-style: normal;
-    font-weight: 300;
-    font-size: 24px;
-    line-height: 30px;
+    font-style: normal
+    font-weight: 300
+    font-size: 24px
+    line-height: 30px
+    margin: 0
     &__strong
-      font-weight: 600;
-      font-size: 36px;
-      line-height: 45px;
+      font-weight: 600
+      font-size: 36px
+      line-height: 45px
       text-transform: uppercase
 .subscribe
   position: relative
@@ -48,10 +49,10 @@
     border: none
     padding-left: 33px
     padding-right: 75px
-    font-style: normal;
-    font-weight: 300;
-    font-size: 14px;
-    line-height: 18px;
+    font-style: normal
+    font-weight: 300
+    font-size: 14px
+    line-height: 18px
   &__button
     position: absolute
     right: 0
@@ -61,9 +62,8 @@
     background-color: $primary
     color: $light
     min-width: 65px
-    font-style: normal;
-    font-weight: bold;
-    font-size: 12px;
-    line-height: 15px;
+    font-style: normal
+    font-weight: bold
+    font-size: 12px
+    line-height: 15px
     cursor: pointer
-
