--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -7,6 +7,7 @@
     line-height: 45px
     text-align: center
     text-transform: uppercase
+    margin-top: 40px
     margin-bottom: 70px
   &-slider
     &__item
@@ -74,7 +75,7 @@
       line-height: 15px
       color: $primary
       margin-bottom: 10px
-    &__date 
+    &__date
       font-style: normal
       font-weight: normal
       font-size: 10px
@@ -91,7 +92,3 @@
       line-height: 160%
       text-align: justify
       margin: auto
-
-
-
-   
