--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -10,6 +10,10 @@
           height: 100%
           width: 100%
           object-fit: cover
+  .card
+    width: 230px
+    height: 230px
+
 @media (max-width: 992px)
   .container
     max-width: 700px
@@ -40,13 +44,21 @@
       width: 100%
   .booking
     width: 340px
-
   .map
     width: 340px
   .reviews
     &-slider
       &__item
         max-width: 580px
+  .activities
+    &-wrapper
+      flex-wrap: wrap
+    &__card
+      margin-bottom: 20px
+  .card
+    width: 340px
+    height: 255px
+
 @media (max-width:769px)
   .container
     max-width: 576px
@@ -105,6 +117,7 @@
       flex-direction: column
       align-items: flex-start
   .reviews
+    padding-bottom: 60px
     &__title
       font-style: normal
       font-weight: bold
@@ -126,6 +139,11 @@
           right: 50%
           margin-right: -95px
           transform: translate(50%, 0)
+  .activities
+    padding-top: 60px
+  .card
+    width: 49%
+    height: 255px
 
 @media (max-width:576px)
   .logo
@@ -156,7 +174,15 @@
         font-weight: normal
         font-size: 12px
         line-height: 160%
-
+  .activities
+    &__title
+      font-size: 18px
+      line-height: 23px
+      margin-top: 0
+      margin-bottom: 36px
+  .card
+    width: 100%
+    height: 255px
 @media (min-width: 320px) and (max-width: 576px)
   .stars
     padding-right: 30px
@@ -172,6 +198,7 @@
   .map
     height: 173px
   .reviews
+    padding-bottom: 0
     &__title
       font-style: normal
       font-weight: bold
@@ -183,3 +210,5 @@
       &__item
         &:before, &:after
           display: none
+  .activities
+    padding-top: 50px
