--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -14,6 +14,7 @@
 @import 'blocks/newsletter'
 // Подключение стилей для отзывов
 @import 'blocks/reviews'
+// Подклчение стилей Activities
+@import 'blocks/activities'
 // Подключение адапттива
 @import 'media'
-
