--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -13,7 +13,8 @@
   .card
     width: 230px
     height: 230px
-
+    &__title
+      font-size: 14px
 @media (max-width: 992px)
   .container
     max-width: 700px
@@ -50,6 +51,12 @@
     &-slider
       &__item
         max-width: 580px
+    &__title
+      font-style: normal
+      font-weight: bold
+      font-size: 30px
+      line-height: 38px
+      margin-bottom: 50px
   .activities
     &-wrapper
       flex-wrap: wrap
@@ -58,6 +65,8 @@
   .card
     width: 340px
     height: 255px
+    &__title
+      font-size: 16px
 
 @media (max-width:769px)
   .container
@@ -121,9 +130,8 @@
     &__title
       font-style: normal
       font-weight: bold
-      font-size: 30px
-      line-height: 38px
-      margin-bottom: 50px
+      font-size: 18px
+      line-height: 23px
     &-slider
       &__item
         padding: 0 30px 30px
