--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -16,5 +16,7 @@
 @import 'blocks/reviews'
 // Подклчение стилей Activities
 @import 'blocks/activities'
+// стили для footer
+@import 'blocks/footer'
 // Подключение адапттива
 @import 'media'
