--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -100,9 +100,38 @@
     background-color: $primary
     border-radius: 4px
     border: none
+    cursor: pointer
   &__info
     font-style: normal
     font-weight: bold
     font-size: 12px
     line-height: 15px
     color: #E0E0E0
+  &-wrapper-bottom
+    display: grid
+    grid-template-columns: 1fr 2fr 
+    padding-top: 95px
+    padding-bottom: 46px
+  &-container
+    grid-column-start: 2
+    display: flex
+    align-items: center
+    justify-content: space-between
+  &__information
+    max-width: 283px
+  &__policy
+    font-style: normal
+    font-weight: normal
+    font-size: 12px
+    line-height: 15px
+    text-decoration: none
+    color: #fff
+    margin-right: 5px
+  &__pay-way
+    width: 136px
+    cursor: pointer
+ 
+    
+    
+    
+
