--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -15,6 +15,11 @@
     height: 230px
     &__title
       font-size: 14px
+  .footer
+    &__legal
+      margin-left: 35px
+    &__input
+      flex-basis: 100%
 @media (max-width: 992px)
   .container
     max-width: 700px
@@ -67,7 +72,40 @@
     height: 255px
     &__title
       font-size: 16px
-
+  .footer
+    &-wrapper
+      grid-template-columns: repeat(6, 1fr)
+      grid-row-gap: 40px
+    &__logo
+      grid-row: 1 / 2
+      grid-column: span 2
+    &__social
+      &-network
+        grid-row: 1 / 2
+        grid-column: span 4
+        align-self: center
+    &__categories
+      grid-row: 2 / 3
+      grid-column: span 2
+    &__additional
+      grid-column: span 2
+    &__legal
+      grid-column: span 2
+    &__contact
+      &-details
+        grid-column: span 5
+        grid-row: 3
+      &-form
+        grid-column: span 5
+        grid-row: 4
+    &__input
+      flex-basis: 49%
+    &-wrapper-bottom
+      display: grid
+      grid-template-columns: 1fr
+    &-container
+      grid-row: 1
+      grid-column: 1
 @media (max-width:769px)
   .container
     max-width: 576px
@@ -152,6 +190,12 @@
   .card
     width: 49%
     height: 255px
+  .footer
+    padding-top: 73px
+    &__input
+      flex-basis: 40%
+    &-wrapper-bottom
+      padding-top: 56px
 
 @media (max-width:576px)
   .logo
@@ -191,6 +235,53 @@
   .card
     width: 100%
     height: 255px
+  .footer
+    padding-top: 69px
+    &-wrapper
+      grid-template-columns: 1fr
+    &__logo
+      grid-row: 1
+      grid-column: 1
+    &__social
+      &-network
+        grid-row: 2
+        grid-column: 1
+        width: 94%
+    &__additional
+      grid-row: 4
+      grid-column: 1
+      width: 94%
+    &__categories
+      grid-row: 5
+      grid-column: 1
+      width: 94%
+    &__legal
+      grid-row: 3
+      grid-column: 1
+      margin: 0
+      width: 94%
+    &__contact
+      &-details
+        grid-row: 6
+        grid-column: 1
+        width: 94%
+      &-form
+        grid-row: 7
+        grid-column: 1
+        width: 94%
+    &__social-network
+      display: block
+    &__title--inline
+      margin-bottom: 20px
+    &__social-links
+      max-width: 85px
+    &__input
+      flex-basis: 100%
+    &__message
+      flex-basis: 100%
+    &-wrapper-bottom
+      padding-top: 30px
+
 @media (min-width: 320px) and (max-width: 576px)
   .stars
     padding-right: 30px
@@ -220,3 +311,16 @@
           display: none
   .activities
     padding-top: 50px
+  .footer
+    &__contact-form
+      grid-column: 0
+    &__info
+      order: 0
+      width: 100%
+      margin-bottom: 15px
+    &__button
+      order: 1
+    &-container
+      display: block
+    &__information
+      margin-bottom: 10px
