--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -62,12 +62,23 @@
     line-height: 160%
     color: $footer-text-color
     &--mb-2
-      margin-bottom: 30px
+      margin-bottom: 22px
   &__icon
     &-wrapper
       min-width: 40px
+  &__number
+    text-decoration: none
+    color: inherit
+    display: contents
+  &__mail
+    text-decoration: none
+    color: inherit
   &__text
     color: $footer-text-color
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 160%;
     margin-bottom: 22px
   &__link
     text-decoration: none
@@ -80,6 +91,10 @@
     height: 50px
     margin-bottom: 15px
     flex-basis: 48%
+    font-style: normal
+    font-weight: normal
+    font-size: 12px
+    line-height: 15px
   &__message
     background-color: #fff
     height: 123px
@@ -88,6 +103,10 @@
     border: none
     flex-basis: 100%
     margin-bottom: 22px
+    font-style: normal
+    font-weight: normal
+    font-size: 12px
+    line-height: 15px
   &__button
     min-width: 160px
     min-height: 50px
@@ -119,6 +138,7 @@
     justify-content: space-between
   &__information
     max-width: 283px
+    margin-left: 42px
   &__policy
     font-style: normal
     font-weight: normal
