--- a/css/styles.css
+++ b/css/styles.css
@@ -414,6 +414,10 @@ template {
   line-height: 18px;
 }
 
+.navbar-menu__item--mobile--visible {
+  display: none;
+}
+
 .logo {
   width: 177px;
 }
@@ -1559,8 +1563,60 @@ template {
     max-width: 576px;
     width: 92%;
   }
-  .navbar__search, .navbar-menu, .navbar__user {
+  body {
+    padding-top: 78px;
+  }
+  .navbar__mobile--fixed {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 99;
+  }
+  .navbar__search--mobile--hidden, .navbar__user--mobile--hidden {
     display: none;
+  }
+  .navbar__search--mobile--visible, .navbar__user--mobile--visible {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .navbar__search--mobile--visible {
+    width: 60%;
+  }
+  .navbar__user {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .navbar-bottom {
+    display: none;
+    position: fixed;
+    left: 30%;
+    right: 30%;
+    bottom: 20%;
+    top: 78px;
+    padding-top: 30px;
+    border-radius: 8px;
+  }
+  .navbar-bottom--visible {
+    display: block;
+  }
+  .navbar-menu {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .navbar-menu__item {
+    margin-bottom: 20px;
+  }
+  .navbar-menu__item--mobile--visible {
+    display: block;
   }
   .menu-button {
     display: -webkit-box;
@@ -1587,6 +1643,11 @@ template {
     width: 16px;
     height: 1px;
     background-color: #333333;
+  }
+  .user__name--light {
+    color: #ffffff;
+    margin-left: 0;
+    margin-top: 10px;
   }
   .stars {
     -ms-flex-preferred-size: auto;
@@ -1713,6 +1774,13 @@ template {
 }
 
 @media (max-width: 576px) {
+  .navbar-bottom {
+    right: 10%;
+    left: 10%;
+  }
+  .navbar__search--mobile--visible {
+    width: 80%;
+  }
   .logo {
     width: 99px;
   }
@@ -1834,6 +1902,14 @@ template {
 }
 
 @media (min-width: 320px) and (max-width: 576px) {
+  .navbar-bottom {
+    right: 0;
+    left: 0;
+    bottom: 0;
+  }
+  .navbar__search--mobile--visible {
+    width: 245px;
+  }
   .stars {
     padding-right: 30px;
   }
