--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -6,11 +6,11 @@
     justify-content: space-between
     padding: 40px 0px
     &__menu-button
-      display: none 
+      display: none
   &__search
     margin-right: auto
     margin-left: 108px
-  
+
   &-bottom
     background-color: $dark
   &-menu
@@ -27,6 +27,9 @@
       text-transform: uppercase
       font-size: 14px
       line-height: 18px
+    &__item
+      &--mobile--visible
+        display: none
 .logo
   width: 177px
 .search
@@ -68,4 +71,3 @@
     font-size: 14px
     line-height: 18px
     color: $text-color
-    
