--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -133,7 +133,9 @@
         display: flex
     &__search
       &--mobile--visible
-        width: 60%
+        width: 245px
+        margin-top: 7px
+        margin-bottom: 22px
     &__user
       flex-direction: column
       justify-content: center
@@ -148,10 +150,11 @@
       border-radius: 8px
       &--visible
         display: block
+        overflow-y: scroll
     &-menu
       flex-direction: column
       &__item
-        margin-bottom: 20px
+        margin-bottom: 17px
         &--mobile--visible
           display: block
   .menu
