--- a/css/styles.css
+++ b/css/styles.css
@@ -508,7 +508,7 @@ template {
 }
 
 .hotel {
-  padding-top: 23px;
+  padding-top: 17px;
   padding-bottom: 70px;
 }
 
@@ -866,7 +866,7 @@ template {
 
 .subscribe {
   position: relative;
-  width: 355px;
+  width: 350px;
   height: 55px;
   border-radius: 4px;
   overflow: hidden;
@@ -902,7 +902,7 @@ template {
 }
 
 .reviews {
-  padding: 40px 0 70px 0;
+  padding: 0 0 70px 0;
 }
 
 .reviews__title {
@@ -1043,7 +1043,7 @@ template {
 }
 
 .activities {
-  padding: 75px 0 83px 0;
+  padding: 27px 0 97px 0;
 }
 
 .activities__title {
@@ -1156,7 +1156,7 @@ template {
 }
 
 .footer__logo {
-  width: 166px;
+  width: 155px;
   -ms-grid-row: 1;
   -ms-grid-row-span: 2;
   grid-row: 1 / 3;
@@ -1169,6 +1169,10 @@ template {
   -ms-grid-row: 1;
   -ms-grid-row-span: 3;
   grid-row: 1 / 4;
+}
+
+.footer__additional {
+  margin-left: 5px;
 }
 
 .footer__social-links {
@@ -1195,10 +1199,12 @@ template {
   -ms-grid-row-span: 2;
   grid-row: 2 / 4;
   grid-column: span 2;
+  margin-top: 3px;
+  margin-left: 4px;
 }
 
 .footer__legal {
-  margin-left: 73px;
+  margin-left: 66px;
 }
 
 .footer__contact-details {
@@ -1757,7 +1763,7 @@ template {
   }
 }
 
-@media (min-width: 576px) and (max-width: 768px) {
+@media (min-width: 576px) and (max-width: 767px) {
   .footer__additional {
     grid-column: span 3;
   }
