--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -10,11 +10,13 @@
     grid-auto-rows: minmax(43px, min-content)
     align-items: start
   &__logo
-    width: 166px
+    width: 155px
     grid-row: 1 / 3
     align-self: stretch
   &__categories
     grid-row: 1 / 4
+  &__additional
+    margin-left: 5px
   &__social
     &-links
       display: flex
@@ -26,8 +28,10 @@
       align-items: start
       grid-row: 2 / 4
       grid-column: span 2
+      margin-top: 3px
+      margin-left: 4px
   &__legal
-    margin-left: 73px
+    margin-left: 66px
   &__contact
     &-details
       grid-column: span 2
