--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -386,6 +386,8 @@
       &__item
         &:before, &:after
           display: none
+      &__text
+        height: 263px
   .activities
     padding-top: 50px
   .footer
