--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -18,5 +18,7 @@
 @import 'blocks/activities'
 // стили для footer
 @import 'blocks/footer'
+// стили для модального окна
+@import 'blocks/modal'
 // Подключение адапттива
 @import 'media'
