--- a/sass/blocks/_modal.sass
+++ b/sass/blocks/_modal.sass
@@ -9,6 +9,10 @@
     z-index: 100
     visibility: hidden
     opacity: 0
+    transition: opacity 0.5s
+    &--visible
+      visibility: visible
+      opacity: 1
   &__dialog
     position: fixed
     top: 50%
@@ -22,9 +26,15 @@
     z-index: 101
     visibility: hidden
     opacity: 0
-  // &__form
-  //   display: inline-flex
-  //   justify-content: space-between
+    transition: opacity 0.3s
+    &--visible
+      visibility: visible
+      opacity: 1
+      overflow: auto
+  &__form
+    display: flex
+    flex-direction: column
+
   &__close
     position: absolute
     top: 17px
@@ -43,7 +53,6 @@
     font-size: 12px
     line-height: 15px
     color: #E0E0E0
-    margin-left: 40px
   &__title
     font-style: normal
     font-weight: bold
@@ -52,3 +61,8 @@
     margin: 0 0 16px 0
     text-align: center
     text-transform: uppercase
+  &__footer
+    display: flex
+    flex-wrap: wrap
+    align-items: center
+    justify-content: space-between
