created: validation for input form

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -19,7 +19,8 @@
     &__legal
       margin-left: 35px
     &__input
-      flex-basis: 100%
+      &-group
+        flex-basis: 100%
 @media (max-width: 992px)
   .container
     max-width: 700px
@@ -104,7 +105,8 @@
     &__form
       max-width: 540px
     &__input
-      flex-basis: 49%
+      &-group
+        flex-basis: 49%
     &-wrapper-bottom
       display: grid
       grid-template-columns: 1fr
@@ -252,7 +254,8 @@
   .footer
     padding-top: 73px
     &__input
-      flex-basis: 100%
+      &-group
+        flex-basis: 100%
     &-wrapper-bottom
       padding-top: 56px
   .modal
@@ -359,7 +362,8 @@
     &__social-links
       max-width: 85px
     &__input
-      flex-basis: 100%
+      &-group
+        flex-basis: 100%
     &__message
       flex-basis: 100%
     &-wrapper-bottom
@@ -425,7 +429,6 @@
   .modal
     &__dialog
       &--visible
-
         width: 95%
         overflow: auto
 
