--- a/css/styles.css
+++ b/css/styles.css
@@ -47,6 +47,23 @@ img {
   border: none;
 }
 
+.invalid {
+  color: #EC1F46;
+}
+
+input {
+  outline: none;
+}
+
+textarea {
+  outline: none;
+}
+
+button {
+  outline: none;
+  cursor: pointer;
+}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -472,6 +489,7 @@ template {
   font-size: 12px;
   line-height: 15px;
   color: #333333;
+  outline: none;
 }
 
 .search__button {
@@ -899,11 +917,9 @@ template {
   width: 350px;
   height: 55px;
   border-radius: 4px;
-  overflow: hidden;
 }
 
 .subscribe__input {
-  position: absolute;
   width: 100%;
   height: 100%;
   border: none;
@@ -913,6 +929,8 @@ template {
   font-weight: 300;
   font-size: 14px;
   line-height: 18px;
+  outline: none;
+  border-radius: 5px;
 }
 
 .subscribe__button {
@@ -929,6 +947,8 @@ template {
   font-size: 12px;
   line-height: 15px;
   cursor: pointer;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 
 .reviews {
@@ -1332,10 +1352,13 @@ template {
 }
 
 .footer__input {
+  width: 100%;
+}
+
+.footer__input-group {
   background-color: #fff;
   border-radius: 4px;
   border: none;
-  padding: 0 23px;
   height: 50px;
   margin-bottom: 15px;
   -ms-flex-preferred-size: 48%;
@@ -1489,12 +1512,13 @@ template {
 
 .modal__input {
   width: 100%;
-  margin-bottom: 15px;
+  margin-top: 15px;
 }
 
 .modal__message {
   width: 100%;
   min-height: 123px;
+  margin-top: 15px;
   margin-bottom: 15px;
 }
 
@@ -1553,7 +1577,7 @@ template {
   .footer__legal {
     margin-left: 35px;
   }
-  .footer__input {
+  .footer__input-group {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
   }
@@ -1678,7 +1702,7 @@ template {
   .footer__form {
     max-width: 540px;
   }
-  .footer__input {
+  .footer__input-group {
     -ms-flex-preferred-size: 49%;
         flex-basis: 49%;
   }
@@ -1904,7 +1928,7 @@ template {
   .footer {
     padding-top: 73px;
   }
-  .footer__input {
+  .footer__input-group {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
   }
@@ -2050,7 +2074,7 @@ template {
   .footer__social-links {
     max-width: 85px;
   }
-  .footer__input {
+  .footer__input-group {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
   }
