--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -33,3 +33,12 @@ img
   background-color: $primary
   border-radius: 4px
   border: none
+.invalid
+  color: $primary
+input
+  outline: none
+textarea
+  outline: none
+button
+  outline: none
+  cursor: pointer
