--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -54,7 +54,7 @@
     margin: 0 0 16px 0
     text-transform: uppercase
     &--inline
-      margin: 0 43px 0 0 
+      margin: 0 43px 0 0
     &--mb-32
       margin-bottom: 32px
   &__item
@@ -79,26 +79,27 @@
     color: inherit
   &__text
     color: $footer-text-color
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 160%;
+    font-style: normal
+    font-weight: normal
+    font-size: 14px
+    line-height: 160%
     margin-bottom: 22px
   &__link
     text-decoration: none
     color: inherit
   &__input
-    background-color: #fff
-    border-radius: 4px
-    border: none
-    padding: 0 23px
-    height: 50px
-    margin-bottom: 15px
-    flex-basis: 48%
-    font-style: normal
-    font-weight: normal
-    font-size: 12px
-    line-height: 15px
+    width: 100%
+    &-group
+      background-color: #fff
+      border-radius: 4px
+      border: none
+      height: 50px
+      margin-bottom: 15px
+      flex-basis: 48%
+      font-style: normal
+      font-weight: normal
+      font-size: 12px
+      line-height: 15px
   &__message
     background-color: #fff
     height: 123px
@@ -114,7 +115,7 @@
   &__button
     min-width: 160px
     min-height: 50px
-    padding: 18px 
+    padding: 18px
     font-style: normal
     font-weight: bold
     font-size: 12px
@@ -132,7 +133,7 @@
     color: #E0E0E0
   &-wrapper-bottom
     display: grid
-    grid-template-columns: 1fr 2fr 
+    grid-template-columns: 1fr 2fr
     padding-top: 95px
     padding-bottom: 46px
   &-container
@@ -154,8 +155,3 @@
   &__pay-way
     width: 136px
     cursor: pointer
- 
-    
-    
-    
-
