--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -48,6 +48,7 @@
     font-size: 12px
     line-height: 15px
     color: $text-color
+    outline: none
   &__button
     position: absolute
     height: 100%
