--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -41,9 +41,9 @@
   width: 350px
   height: 55px
   border-radius: 4px
-  overflow: hidden
+  // overflow: hidden
   &__input
-    position: absolute
+    // position: absolute
     width: 100%
     height: 100%
     border: none
@@ -53,6 +53,8 @@
     font-weight: 300
     font-size: 14px
     line-height: 18px
+    outline: none
+    border-radius: 5px
   &__button
     position: absolute
     right: 0
@@ -67,3 +69,5 @@
     font-size: 12px
     line-height: 15px
     cursor: pointer
+    border-top-right-radius: 5px
+    border-bottom-right-radius: 5px
