fixed: newsletter input and send.php

--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -27,7 +27,7 @@
     color: inherit
   &-grid
     display: flex
-    justify-content: space-between    
+    justify-content: space-between
   &-right
     display: flex
     flex-direction: column
@@ -96,7 +96,9 @@
   &__counter
     font-size: 14px
     line-height: 18px
-
+  &__small
+    font-size: 10px
+    margin-left: -4px
 
 .booking
   background: $dark
@@ -179,5 +181,3 @@
   height: 213px
   border-radius: 10px
   overflow: hidden
-  
-  
