--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -74,10 +74,11 @@
     &__title
       font-size: 16px
   .footer
+    padding-top: 70px
     &-wrapper
       grid-template-columns: 1fr 1fr 2fr 1fr 1fr 1fr
       grid-row-gap: 40px
-    &__logo
+    &__logo-link
       grid-row: 1 / 2
       grid-column: span 2
       width: 104px
@@ -99,9 +100,11 @@
       &-details
         grid-column: span 5
         grid-row: 3
+        margin-top: 22px
       &-form
         grid-column: span 5
         grid-row: 4
+        margin-top: -14px
     &__form
       max-width: 540px
     &__input
@@ -110,6 +113,7 @@
     &-wrapper-bottom
       display: grid
       grid-template-columns: 1fr
+      padding-top: 60px
     &-container
       grid-row: 1
       grid-column: 1
@@ -266,6 +270,7 @@
   .footer
     &__additional
       grid-column: span 3
+      margin-left: 25px
     &__legal
       grid-row: 3
       grid-column: span 3
@@ -336,6 +341,7 @@
       grid-row: 4
       grid-column: 1
       width: 94%
+      margin-left: 0
     &__categories
       grid-row: 5
       grid-column: 1
