--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -9,10 +9,10 @@
     grid-gap: 20px
     grid-auto-rows: minmax(43px, min-content)
     align-items: start
-  &__logo
+  &__logo-link
     width: 155px
     grid-row: 1 / 3
-    align-self: stretch
+    align-self: center
   &__categories
     grid-row: 1 / 4
   &__additional
