--- a/css/styles.css
+++ b/css/styles.css
@@ -1218,14 +1218,14 @@ template {
           align-items: start;
 }
 
-.footer__logo {
+.footer__logo-link {
   width: 155px;
   -ms-grid-row: 1;
   -ms-grid-row-span: 2;
   grid-row: 1 / 3;
-  -ms-flex-item-align: stretch;
-      -ms-grid-row-align: stretch;
-      align-self: stretch;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
 }
 
 .footer__categories {
@@ -1665,12 +1665,15 @@ template {
   .card__title {
     font-size: 16px;
   }
+  .footer {
+    padding-top: 70px;
+  }
   .footer-wrapper {
     -ms-grid-columns: 1fr 1fr 2fr 1fr 1fr 1fr;
         grid-template-columns: 1fr 1fr 2fr 1fr 1fr 1fr;
     grid-row-gap: 40px;
   }
-  .footer__logo {
+  .footer__logo-link {
     -ms-grid-row: 1;
     -ms-grid-row-span: 1;
     grid-row: 1 / 2;
@@ -1704,11 +1707,13 @@ template {
     grid-column: span 5;
     -ms-grid-row: 3;
     grid-row: 3;
+    margin-top: 22px;
   }
   .footer__contact-form {
     grid-column: span 5;
     -ms-grid-row: 4;
     grid-row: 4;
+    margin-top: -14px;
   }
   .footer__form {
     max-width: 540px;
@@ -1722,6 +1727,7 @@ template {
     display: grid;
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
+    padding-top: 60px;
   }
   .footer-container {
     -ms-grid-row: 1;
@@ -1954,6 +1960,7 @@ template {
 @media (min-width: 576px) and (max-width: 767px) {
   .footer__additional {
     grid-column: span 3;
+    margin-left: 25px;
   }
   .footer__legal {
     -ms-grid-row: 3;
@@ -2045,6 +2052,7 @@ template {
     -ms-grid-column: 1;
     grid-column: 1;
     width: 94%;
+    margin-left: 0;
   }
   .footer__categories {
     -ms-grid-row: 5;
